fixed galery block z-index

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -306,6 +306,7 @@ img {
     height: 100vh;
     background-color: #095c5c;
     position: fixed;
+    z-index: 1000;
 }
 
 .link-actve {
